Font size adaptive to fit one line in user edit menu's header --- Collapsible sidebar - Width limit 100% to avoid scrollbar

--- a/thinktime-fix.css
+++ b/thinktime-fix.css
@@ -19,6 +19,11 @@ MAIN FOCUS
 
 LATEST FIXES
 
+19.07.2025
+----------
+Font size adaptive to fit one line in user edit menu's header
+Collapsible sidebar - Width limit 100% to avoid scrollbar
+
 18.07.2025
 ----------
 Users table - Footer message fixes
@@ -891,6 +896,27 @@ th *, td * {
 } */
 
 /* COMMON RULES */
+
+/* Font size adaptive to fit one line in user edit menu's header */
+[data-ng-show="model.editedAgent.Id == 0"],
+[data-ng-show="model.editedAgent.Id > 0"] {
+  font-size: min(5vw, 24px);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.extendedPage .wrapperNewTicket header h1 {
+    font-weight: 300;
+    margin: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+/* Collapsible sidebar - Width limit 100% to avoid scrollbar */
+[class^="collapsible-sidebar-module__container--"] {
+  max-width: 100%;
+}
 
 /* Users table - Fix for columns width */
 /* -- Mobile view */
